--- a/public/landing-treatments.html
+++ b/public/landing-treatments.html
@@ -59,6 +59,62 @@
       <p class="muted" style="text-align:center;margin-bottom:24px;" data-i18n="landing.treatments.subtitle">
         כל הטיפולים מתבצעים על-ידי צוות תאילנדי מקצועי, באווירה שקטה ומוסיקה מרגיעה.
       </p>
+<!-- ===== Video Slider ===== -->
+<section class="video-slider" aria-label="Video highlights">
+  <div class="video-slider__viewport" id="videoSlider">
+    <div class="video-slider__track">
+      <!-- Slide 1 -->
+      <div class="video-slide is-active">
+        <video class="video-slide__video" muted playsinline preload="metadata">
+          <source src="assets/videos/slide-1.mp4" type="video/mp4" />
+        </video>
+      </div>
+
+      <!-- Slide 2 -->
+      <div class="video-slide">
+        <video class="video-slide__video" muted playsinline preload="metadata">
+          <source src="assets/videos/slide-2.mp4" type="video/mp4" />
+        </video>
+      </div>
+
+      <!-- Slide 3 -->
+      <div class="video-slide">
+        <video class="video-slide__video" muted playsinline preload="metadata">
+          <source src="assets/videos/slide-3.mp4" type="video/mp4" />
+        </video>
+      </div>
+
+      <!-- Slide 4 -->
+      <div class="video-slide">
+        <video class="video-slide__video" muted playsinline preload="metadata">
+          <source src="assets/videos/slide-4.mp4" type="video/mp4" />
+        </video>
+      </div>
+
+      <!-- Slide 5 -->
+      <div class="video-slide">
+        <video class="video-slide__video" muted playsinline preload="metadata">
+          <source src="assets/videos/slide-5.mp4" type="video/mp4" />
+        </video>
+      </div>
+    </div>
+
+    <button class="video-slider__nav video-slider__nav--prev" type="button" aria-label="Previous">
+      ‹
+    </button>
+    <button class="video-slider__nav video-slider__nav--next" type="button" aria-label="Next">
+      ›
+    </button>
+
+    <div class="video-slider__dots" aria-label="Slider dots">
+      <button class="video-slider__dot is-active" type="button" aria-label="Go to slide 1"></button>
+      <button class="video-slider__dot" type="button" aria-label="Go to slide 2"></button>
+      <button class="video-slider__dot" type="button" aria-label="Go to slide 3"></button>
+      <button class="video-slider__dot" type="button" aria-label="Go to slide 4"></button>
+      <button class="video-slider__dot" type="button" aria-label="Go to slide 5"></button>
+    </div>
+  </div>
+</section>
 
       <div class="home-grid">
         <!-- 👑 ספא ראש יפני -->
