--- a/public/landing-treatments.html
+++ b/public/landing-treatments.html
@@ -66,7 +66,7 @@
       <!-- Slide 1 -->
       <div class="video-slide is-active">
         <video class="video-slide__video" muted playsinline preload="metadata">
-          <source src="assets/videos/slide-1.mp4" type="video/mp4" />
+          <source src="public/assets/videos/slide-1.mp4" type="video/mp4" />
         </video>
       </div>
 
