--- a/public/landing-treatments.html
+++ b/public/landing-treatments.html
@@ -293,6 +293,36 @@
             להזמנת הטיפול
           </button>
         </article>
+<!-- 🇸🇪 Swedish Massage -->
+<article class="product-card">
+  <div class="tag">🇸🇪 עיסוי שוודי</div>
+  <h3 class="product-title">Swedish Massage | עיסוי שוודי</h3>
+  <p>
+    עיסוי גוף מלא קלאסי בתנועות ארוכות, לישה עדינה והנעות זורמות לשחרור מתחים והרגעה עמוקה.
+    משפר זרימת דם, מסייע בהפחתת עומס שרירי ומחזיר תחושת קלילות ורעננות.
+    הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי עדין באזור הפנים.
+  </p>
+  <p class="price">60 דק׳ – 160₾ · 90 דק׳ – 210₾</p>
+
+  <div class="duration-options">
+    <label>
+      <input type="radio" name="dur-swedish" value="60" checked />
+      <span data-min="60">60 דק׳</span>
+    </label>
+    <label>
+      <input type="radio" name="dur-swedish" value="90" />
+      <span data-min="90">90 דק׳</span>
+    </label>
+  </div>
+
+  <button class="button"
+          data-book-btn
+          data-treatment-key="body-swedish"
+          data-radio-group="dur-swedish"
+          data-i18n="landing.treatment.book">
+    להזמנת הטיפול
+  </button>
+</article>
 
         <!-- 💪 Deep Thai Oil Back–Neck–Shoulders -->
         <article class="product-card">
