--- a/public/landing-treatments.html
+++ b/public/landing-treatments.html
@@ -73,7 +73,7 @@
                      muted
                      playsinline
                      preload="metadata">
-                <source src="assets/videos/slide-1" type="video/mp4" />
+                <source src="assets/videos/slide-1.mp4" type="video/mp4" />
               </video>
             </div>
 
@@ -85,7 +85,7 @@
                      muted
                      playsinline
                      preload="metadata">
-                <source src="assets/videos/slide-2" type="video/mp4" />
+                <source src="assets/videos/slide-2.mp4" type="video/mp4" />
               </video>
             </div>
 
@@ -97,7 +97,7 @@
                      muted
                      playsinline
                      preload="metadata">
-                <source src="assets/videos/slide-3" type="video/mp4" />
+                <source src="assets/videos/slide-3.mp4" type="video/mp4" />
               </video>
             </div>
 
@@ -109,7 +109,7 @@
                      muted
                      playsinline
                      preload="metadata">
-                <source src="assets/videos/slide-4" type="video/mp4" />
+                <source src="assets/videos/slide-4.mp4" type="video/mp4" />
               </video>
             </div>
 
@@ -121,7 +121,7 @@
                      muted
                      playsinline
                      preload="metadata">
-                <source src="assets/videos/slide-5" type="video/mp4" />
+                <source src="assets/videos/slide-5.mp4" type="video/mp4" />
               </video>
             </div>
 
