--- a/public/landing-treatments.html
+++ b/public/landing-treatments.html
@@ -112,15 +112,11 @@
             כולל שטיפה עמוקה, מגבת חמה, סרום ייעודי לקרקפת וייבוש שיער מלא.
             הטיפול מסתיים במנוחה קצרה עם תה וניחוח ארומטי עדין.
           </p>
-          <p class="price">60 דק׳ – 200₾ · 90 דק׳ – 250₾</p>
+          <p class="price">60 דק׳ – 200₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-head" value="60" checked />
               <span data-min="60">60 דק׳</span>
-            </label>
-            <label>
-              <input type="radio" name="dur-head" value="90" />
-              <span data-min="90">90 דק׳</span>
             </label>
           </div>
           <button class="button"
@@ -260,16 +256,12 @@
     משפר זרימת דם, מסייע בהפחתת עומס שרירי ומחזיר תחושת קלילות ורעננות.
     הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי עדין באזור הפנים.
   </p>
-  <p class="price">60 דק׳ – 160₾ · 90 דק׳ – 210₾</p>
+  <p class="price">60 דק׳ – 160₾</p>
 
   <div class="duration-options">
     <label>
       <input type="radio" name="dur-swedish" value="60" checked />
       <span data-min="60">60 דק׳</span>
-    </label>
-    <label>
-      <input type="radio" name="dur-swedish" value="90" />
-      <span data-min="90">90 דק׳</span>
     </label>
   </div>
 
@@ -352,15 +344,11 @@
             מתאים במיוחד לעור רגיש ולאחר חשיפה לשמש.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 170₾ · 90 דק׳ – 220₾</p>
+          <p class="price">60 דק׳ – 170₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-aloe" value="60" checked />
               <span data-min="60">60 דק׳</span>
-            </label>
-            <label>
-              <input type="radio" name="dur-aloe" value="90" />
-              <span data-min="90">90 דק׳</span>
             </label>
           </div>
           <button class="button"
@@ -385,15 +373,11 @@
             יוצר תחושת רכות והרפיה כללית.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 175₾ · 90 דק׳ – 225₾</p>
+          <p class="price">60 דק׳ – 175₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-vit-e" value="60" checked />
               <span data-min="60">60 דק׳</span>
-            </label>
-            <label>
-              <input type="radio" name="dur-vit-e" value="90" />
-              <span data-min="90">90 דק׳</span>
             </label>
           </div>
           <button class="button"
@@ -418,15 +402,11 @@
             מתאים למי שמחפש חוויה עדינה ולא אינטנסיבית.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 180₾ · 90 דק׳ – 230₾</p>
+          <p class="price">60 דק׳ – 180₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-relax" value="60" checked />
               <span data-min="60">60 דק׳</span>
-            </label>
-            <label>
-              <input type="radio" name="dur-relax" value="90" />
-              <span data-min="90">90 דק׳</span>
             </label>
           </div>
           <button class="button"
@@ -451,15 +431,11 @@
             מתאים במיוחד לעור יבש או רגיש.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 175₾ · 90 דק׳ – 225₾</p>
+          <p class="price">60 דק׳ – 175₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-coconut" value="60" checked />
               <span data-min="60">60 דק׳</span>
-            </label>
-            <label>
-              <input type="radio" name="dur-coconut" value="90" />
-              <span data-min="90">90 דק׳</span>
             </label>
           </div>
           <button class="button"
@@ -484,15 +460,11 @@
             עיסוי פעיל ודינמי.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 190₾ · 90 דק׳ – 230₾</p>
+          <p class="price">60 דק׳ – 190₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-thai" value="60" checked />
               <span data-min="60">60 דק׳</span>
-            </label>
-            <label>
-              <input type="radio" name="dur-thai" value="90" />
-              <span data-min="90">90 דק׳</span>
             </label>
           </div>
           <button class="button"
@@ -517,15 +489,11 @@
             מתאים לשרירים תפוסים.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 190₾ · 90 דק׳ – 240₾</p>
+          <p class="price">60 דק׳ – 190₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-balm" value="60" checked />
               <span data-min="60">60 דק׳</span>
-            </label>
-            <label>
-              <input type="radio" name="dur-balm" value="90" />
-              <span data-min="90">90 דק׳</span>
             </label>
           </div>
           <button class="button"
@@ -550,15 +518,11 @@
             מיועד למי שמחפש טיפול אמיתי.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 230₾ · 90 דק׳ – 280₾</p>
+          <p class="price">60 דק׳ – 230₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-thai-ther" value="60" checked />
               <span data-min="60">60 דק׳</span>
-            </label>
-            <label>
-              <input type="radio" name="dur-thai-ther" value="90" />
-              <span data-min="90">90 דק׳</span>
             </label>
           </div>
           <button class="button"
@@ -583,15 +547,11 @@
             מתאים לספורטאים ולאנשים פעילים.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 240₾ · 90 דק׳ – 290₾</p>
+          <p class="price">60 דק׳ – 240₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-sports" value="60" checked />
               <span data-min="60">60 דק׳</span>
-            </label>
-            <label>
-              <input type="radio" name="dur-sports" value="90" />
-              <span data-min="90">90 דק׳</span>
             </label>
           </div>
           <button class="button"
@@ -616,15 +576,11 @@
             מיועד למטופלים מנוסים.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 250₾ · 90 דק׳ – 300₾</p>
+          <p class="price">60 דק׳ – 250₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-deep-cream" value="60" checked />
               <span data-min="60">60 דק׳</span>
-            </label>
-            <label>
-              <input type="radio" name="dur-deep-cream" value="90" />
-              <span data-min="90">90 דק׳</span>
             </label>
           </div>
           <button class="button"
@@ -649,15 +605,11 @@
             מתאים לכאבים כרוניים.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 230₾ · 90 דק׳ – 280₾</p>
+          <p class="price">60 דק׳ – 230₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-cannabis" value="60" checked />
               <span data-min="60">60 דק׳</span>
-            </label>
-            <label>
-              <input type="radio" name="dur-cannabis" value="90" />
-              <span data-min="90">90 דק׳</span>
             </label>
           </div>
           <button class="button"
@@ -711,15 +663,11 @@
             חוויה טיפולית ייחודית.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 220₾ · 90 דק׳ – 260₾</p>
+          <p class="price">60 דק׳ – 220₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-thai-comp-body" value="60" checked />
               <span data-min="60">60 דק׳</span>
-            </label>
-            <label>
-              <input type="radio" name="dur-thai-comp-body" value="90" />
-              <span data-min="90">90 דק׳</span>
             </label>
           </div>
           <button class="button"
@@ -744,15 +692,11 @@
             מיועד למטופלים מנוסים בלבד.
             הטיפול מתבצע כעיסוי גוף מלא וכולל גם עיסוי פנים.
           </p>
-          <p class="price">60 דק׳ – 260₾ · 90 דק׳ – 320₾</p>
+          <p class="price">60 דק׳ – 260₾</p>
           <div class="duration-options">
             <label>
               <input type="radio" name="dur-karsai" value="60" checked />
               <span data-min="60">60 דק׳</span>
-            </label>
-            <label>
-              <input type="radio" name="dur-karsai" value="90" />
-              <span data-min="90">90 דק׳</span>
             </label>
           </div>
           <button class="button"
