--- a/public/landing-treatments.html
+++ b/public/landing-treatments.html
@@ -96,7 +96,70 @@
   </div>
 </section>
 
+<!-- ===== Signature Treatments Slider ===== -->
+<section class="signature-section" aria-label="Signature Treatments">
+  <h2 class="signature-title" data-i18n="landing.signature.title">
+    טיפולי הדגל שלנו
+  </h2>
 
+  <div class="signature-slider" id="signatureSlider">
+    <div class="signature-track">
+
+      <article class="signature-slide">
+        <h3 data-i18n="signature.headspa.title">Japanese Head Spa | ספא ראש יפני</h3>
+        <p data-i18n="signature.headspa">
+          טיפול יפני מסורתי המשלב ניקוי עמוק של הקרקפת, עיסוי ממוקד, מסכות ייעודיות ופינוקי מים.
+          ממריץ זרימת דם, מחזק שורשי שיער ומרגיע עומסים נפשיים.
+          כולל שטיפה, מגבת חמה, סרום וייבוש מלא.
+          מסתיים במנוחה עם תה וניחוח ארומטי.
+        </p>
+      </article>
+
+      <article class="signature-slide">
+        <h3 data-i18n="signature.reflexology.title">Thai Reflexology Foot Massage | עיסוי תאילנדי רפלקסולוגי</h3>
+        <p data-i18n="signature.reflexology">
+          עיסוי תאילנדי ממוקד לכפות הרגליים המבוסס על רפלקסולוגיה.
+          מתבצע עם משחה תאילנדית חריפה ולחיצות עמוקות על נקודות השתקפות.
+          מסייע בהמרצת זרימת הדם ובהשפעה מערכתית.
+        </p>
+      </article>
+
+      <article class="signature-slide">
+        <h3 data-i18n="signature.sports.title">Sports Massage | עיסוי ספורט</h3>
+        <p data-i18n="signature.sports">
+          עיסוי אינטנסיבי לשחרור עומסים מפעילות גופנית.
+          משלב טכניקות עומק ומתיחות.
+          מסייע בהתאוששות ומניעת פציעות.
+         עיסוי גוף מלא.
+        </p>
+      </article>
+
+      <article class="signature-slide">
+        <h3 data-i18n="signature.karsai.title">Karsai Massage | עיסוי תאילנדי קארסאי – פרימיום</h3>
+        <p data-i18n="signature.karsai">
+          עיסוי תאילנדי מתקדם מהרפואה העתיקה.
+          מתמקד באזורים אנרגטיים עמוקים לאיזון וחיזוק הגוף.
+         טיפול עוצמתי ונישתי למטופלים מנוסים בלבד.
+          עיסוי גוף מלא.
+
+        </p>
+      </article>
+
+      <article class="signature-slide">
+        <h3 data-i18n="signature.vitamine.title">Thai Vitamin E Cream Massage | עיסוי תאילנדי עם קרם ויטמין E</h3>
+        <p data-i18n="signature.vitamine">
+          עיסוי תאילנדי עם קרם מועשר בויטמין E להזנה עמוקה של העור.
+          משפר גמישות, מפחית יובש ומשלב רוגע וטיפוח קוסמטי.
+         עיסוי גוף מלא.
+        </p>
+      </article>
+
+    </div>
+
+    <button class="signature-nav prev">‹</button>
+    <button class="signature-nav next">›</button>
+  </div>
+</section>
 
       <div class="home-grid">
 
@@ -247,6 +310,7 @@
             להזמנת הטיפול
           </button>
         </article>
+
 <!-- 🇸🇪 Swedish Massage -->
 <article class="product-card">
   <div class="tag">🇸🇪 עיסוי שוודי</div>
@@ -273,7 +337,6 @@
     להזמנת הטיפול
   </button>
 </article>
-
 
         <!-- 💪 Deep Thai Oil Back–Neck–Shoulders -->
         <article class="product-card">
